Fix Vercel deployment - add Node version config and dev script

--- a/package.json
+++ b/package.json
@@ -27,10 +27,14 @@
   },
   "scripts": {
     "start": "vite",
+    "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint src/**/*.{js,jsx}",
     "test": "vitest"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
