Fix Vercel deployment - resolve date-fns dependency conflict

--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,7 @@
       "destination": "/"
     }
   ],
+  "installCommand": "npm install --legacy-peer-deps",
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "framework": "vite"
