Enable public access for deployment - keep password protection

--- a/vercel.json
+++ b/vercel.json
@@ -8,5 +8,6 @@
   "installCommand": "npm install --legacy-peer-deps",
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "framework": "vite"
+  "framework": "vite",
+  "public": true
 }
